--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MegaFilmesHD</title>
+    <title>RS7FilmesHD</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="titulo">
-        <a href="index.html"><h1>MegaFilmes<span>HD</span></h1></a>
+        <a href="index.html"><h1>RS7Filmes<span>HD</span></h1></a>
     </div>
     <form>
         <input type="text" name="pesquisa" placeholder="Digite o nome do filme">
